--- a/english.html
+++ b/english.html
@@ -1,3 +1,11 @@
+باشە تێگەیشتم لە کێشەکەت. تۆ دەتەوێت ئەو دوگمەی گەڕانەوەیەی کە لە سەرەوەی لاپەڕەکە دانراوە (class="back-button")، کاتێک لە لاپەڕەی سەرەکی (پێش کردنەوەی مۆداڵ) دەستکاری، یەکسەر بچێتەوە سەر فایلی index.html و کاری بەوە نەبێت کە چ مۆداڵێک کراوەتەوە یان چ شتێک لە مێژووی گەڕانەکەدا هەیە.
+
+کۆدی ئێستات دوگمەی گەڕانەوەی سەرەوەی بە href="index.html" داناوە، کە شتێکی ستانداردە و دەینێرێتەوە سەر ئەو پەڕەیە. بەڵام بۆ ئەوەی دڵنیا بینەوە کە "حساب بۆ هیچ نەکات" و مێژووی گەڕانەوە بۆ ئەم لاپەڕەیە (english.html) پاک دەکاتەوە کاتێک بەو دوگمەیە دەگەڕێیتەوە، باشتر وایە بە JavaScript و فەرمانی window.location.replace() بیگوازینەوە. ئەم فەرمانە پەڕەی ئێستا لە مێژووی گەڕانەوەدا لادەبات و پەڕەی نوێ لە شوێنی دادەنێت، بۆیە دوگمەی گەڕانەوەی سیستەم (وەک لە مۆبایل) یەک هەنگاو زیاتر دەگەڕێتەوە و نایەتەوە سەر ئەم پەڕەیە.
+
+ئەو بەشەی کۆد کە پەیوەندی بە مێژووی گەڕانەوەی ناو Alpine.js هەیە بۆ مامەڵەکردن لەگەڵ کردنەوە و داخستنی مۆداڵەکە زۆر باشە و وەک خۆی دەیهێڵینەوە، چونکە ئەو مێژووە تایبەتە بە ناو خودی ئەم لاپەڕەیە کاتێک مۆداڵ دەکرێتەوە. گۆڕانکارییەکە تەنها لە دوگمەی گەڕانەوەی سەرەوەی دەرەکی دەبێت.
+
+لێرەدا هەموو کۆدەکەت داندراوەتەوە و ئەو گۆڕانکارییەی بۆ کراوە:
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -280,7 +288,9 @@
 </head>
 <body dir="ltr">
 
-    <a href="index.html" class="back-button" aria-label="Back to home">
+    <!-- CHANGED: Modified href and added onclick to use location.replace -->
+    <!-- ئێرە گۆڕانکارییەکەی تێدا کراوە -->
+    <a href="#" onclick="window.location.replace('index.html'); return false;" class="back-button" aria-label="Back to home">
        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
          <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
        </svg>
@@ -641,3 +651,4 @@
     </script>
 </body>
 </html>
+
