--- a/kurdish.html
+++ b/kurdish.html
@@ -426,7 +426,7 @@
                         { text: 'ئازا', image: 'images/ku/aza.png', audio: 'audio/ku/aza.mp3' }
                     ]},
                     { letter: 'ا', audio: 'audio/ku/a.mp3', examples: [
-                         { text: 'باپیر', image: 'images/ku/bapir.png', audio: 'audio/ku/bapir.mp3' },
+                         { text: 'باپیر', image: 'images/ku/fire.jpg', audio: 'audio/ku/bapir.mp3' },
                         { text: 'دار', image: 'images/ku/dar.png', audio: 'audio/ku/dar.mp3' },
                         { text: 'مانگا', image: 'images/ku/manga.png', audio: 'audio/ku/manga.mp3' },
                         { text: 'کاڵ', image: 'images/ku/kal.png', audio: 'audio/ku/kal.mp3' }
