--- a/english.html
+++ b/english.html
@@ -390,7 +390,7 @@
         { text: 'Cat', image: 'images/en/Cat.png' },
         { text: 'Car', image: 'images/en/Car.png' },
         { text: 'Cup', image: 'images/en/Cup.png' },
-        { text: 'Cake', image: 'images/en/Cake2.png' }
+        { text: 'Cake', image: 'images/en/Cake.png' }
     ]},
     { letter: 'D', examples: [
         { text: 'Duck', image: 'images/en/Duck.png' },
@@ -437,14 +437,14 @@
     { letter: 'K', examples: [
         { text: 'King', image: 'images/en/King.png' },
         { text: 'Key', image: 'images/en/Key.png' },
-        { text: 'Kangaroo', image: 'images/en/Kangaroo.png' },
-        { text: 'Kite', image: 'images/en/Kite.png' }
+        { text: 'Kangaroo', image: 'images/en/Kangaroo2.png' },
+        { text: 'Kite', image: 'images/en/Kite2.png' }
     ]},
     { letter: 'L', examples: [
         { text: 'Lion', image: 'images/en/Lion.png' },
-        { text: 'Leaf', image: 'images/en/Leaf.png' },
+        { text: 'Leaf', image: 'images/en/Leaf2.png' },
         { text: 'Lamp', image: 'images/en/Lamp.png' },
-        { text: 'Leg', image: 'images/en/Leg.png' }
+        { text: 'Leg', image: 'images/en/Legs.png' }
     ]},
     { letter: 'M', examples: [
         { text: 'Monkey', image: 'images/en/Monkey.png' },
@@ -486,7 +486,7 @@
         { text: 'Sun', image: 'images/en/Sun.png' },
         { text: 'Star', image: 'images/en/Star.png' },
         { text: 'Snake', image: 'images/en/Snake.png' },
-        { text: 'snowman', image: 'images/en/snowman.png' }
+        { text: 'snowman', image: 'images/en/snowman2.png' }
     ]},
     { letter: 'T', examples: [
         { text: 'Tree', image: 'images/en/Tree.png' },
