--- a/english.html
+++ b/english.html
@@ -390,7 +390,7 @@
         { text: 'Cat', image: 'images/en/Cat.png' },
         { text: 'Car', image: 'images/en/Car.png' },
         { text: 'Cup', image: 'images/en/Cup.png' },
-        { text: 'Cake', image: 'images/en/Cakess.png' }
+        { text: 'Castle', image: 'images/en/Castle.png' }
     ]},
     { letter: 'D', examples: [
         { text: 'Duck', image: 'images/en/Duck.png' },
