--- a/english.html
+++ b/english.html
@@ -389,8 +389,9 @@
     { letter: 'C', examples: [
         { text: 'Cat', image: 'images/en/Cat.png' },
         { text: 'Car', image: 'images/en/Car.png' },
+        { text: 'Castle', image: 'images/Castle.png' },
         { text: 'Cup', image: 'images/en/Cup.png' },
-        { text: 'Castle', image: 'images/Castle.png' }, // <--- Double-check this file on your server
+         // <--- Double-check this file on your server
     ]},
     { letter: 'D', examples: [
         { text: 'Duck', image: 'images/en/Duck.png' },
