--- a/english.html
+++ b/english.html
@@ -389,7 +389,7 @@
     { letter: 'C', examples: [
         { text: 'Cat', image: 'images/en/Cat.png' },
         { text: 'Car', image: 'images/en/Car.png' },
-        { text: 'Castle', image: 'images/Castle.png' },
+        { text: 'Cake', image: 'images/en/cakess.png' },
         { text: 'Cup', image: 'images/en/Cup.png' },
          // <--- Double-check this file on your server
     ]},
@@ -444,8 +444,8 @@
     { letter: 'L', examples: [
         { text: 'Lion', image: 'images/en/Lion.png' },
         { text: 'Leaf', image: 'images/en/Leaf2.png' },
-        { text: 'Lamp', image: 'images/en/Lamp.png' },
-        { text: 'Leg', image: 'images/en/Legs.png' }
+        { text: 'Lamp', image: 'images/en/lamp.png' },
+        { text: 'Leg', image: 'images/en/legs.png' }
     ]},
     { letter: 'M', examples: [
         { text: 'Monkey', image: 'images/en/Monkey.png' },
@@ -511,12 +511,12 @@
         { text: 'Water', image: 'images/en/Water.png' },
         { text: 'Wall', image: 'images/en/Wall.png' },
         { text: 'Watch', image: 'images/en/Watch.png' },
-        { text: 'Worm', image: 'images/en/Worm.png' }
+        { text: 'Wizard', image: 'images/en/Wizard.png' }
     ]},
     { letter: 'X', examples: [
         { text: 'X-ray', image: 'images/en/X-ray.png' },
         { text: 'Xylophone', image: 'images/en/Xylophone.png' },
-        { text: 'Xerox', image: 'images/en/Xerox.png' },
+        { text: 'Box', image: 'images/en/box.png' },
         { text: 'Xmas', image: 'images/en/Xmas.png' }
     ]},
     { letter: 'Y', examples: [
