--- a/english.html
+++ b/english.html
@@ -438,13 +438,13 @@
     { letter: 'K', examples: [
         { text: 'King', image: 'images/en/King.png' },
         { text: 'Key', image: 'images/en/Key.png' },
-        { text: 'Kangaroo', image: 'images/en/Kangaroo2.png' },
-        { text: 'Kite', image: 'images/en/Kite2.png' }
+        { text: 'Kangaroo', image: 'images/en/kangaroo2.png' },
+        { text: 'Kite', image: 'images/en/kite2.png' }
     ]},
     { letter: 'L', examples: [
         { text: 'Lion', image: 'images/en/Lion.png' },
-        { text: 'Leaf', image: 'images/en/Leaf2.png' },
-        { text: 'Lamp', image: 'images/en/lamp.png' },
+        { text: 'Leaf', image: 'images/en/leaf2.png' },
+        { text: 'Lamp', image: 'images/en/Lamp2.png' },
         { text: 'Leg', image: 'images/en/legs.png' }
     ]},
     { letter: 'M', examples: [
@@ -475,7 +475,7 @@
         { text: 'Queen', image: 'images/en/Queen.png' },
         { text: 'Quilt', image: 'images/en/Quilt.png' },
         { text: 'Quiz', image: 'images/en/Quiz.png' },
-        { text: 'quill', image: 'images/en/quill.png' }
+        { text: 'quill', image: 'images/en/Quill.png' }
     ]},
     { letter: 'R', examples: [
         { text: 'Rabbit', image: 'images/en/Rabbit.png' },
@@ -487,7 +487,7 @@
         { text: 'Sun', image: 'images/en/Sun.png' },
         { text: 'Star', image: 'images/en/Star.png' },
         { text: 'Snake', image: 'images/en/Snake.png' },
-        { text: 'snowman', image: 'images/en/snowman2.png' }
+        { text: 'snowman', image: 'images/en/Snowman2.png' }
     ]},
     { letter: 'T', examples: [
         { text: 'Tree', image: 'images/en/Tree.png' },
@@ -502,7 +502,7 @@
         { text: 'unicorn', image: 'images/en/Unicorn.png' }
     ]},
     { letter: 'V', examples: [
-        { text: 'Van', image: 'images/en/Van.png' },
+        { text: 'Van', image: 'images/en/van.png' },
         { text: 'Vase', image: 'images/en/Vase.png' },
         { text: 'Vest', image: 'images/en/Vest.png' },
         { text: 'Violin', image: 'images/en/Violin.png' }
@@ -511,7 +511,7 @@
         { text: 'Water', image: 'images/en/Water.png' },
         { text: 'Wall', image: 'images/en/Wall.png' },
         { text: 'Watch', image: 'images/en/Watch.png' },
-        { text: 'Wizard', image: 'images/en/Wizard.png' }
+        { text: 'Wizard', image: 'images/en/wizard.png' }
     ]},
     { letter: 'X', examples: [
         { text: 'X-ray', image: 'images/en/X-ray.png' },
