--- a/english.html
+++ b/english.html
@@ -475,7 +475,7 @@
         { text: 'Queen', image: 'images/en/Queen.png' },
         { text: 'Quilt', image: 'images/en/Quilt.png' },
         { text: 'Quiz', image: 'images/en/Quiz.png' },
-        { text: 'quill', image: 'images/en/Quill.png' }
+        { text: 'Quill', image: 'images/en/Quill.png' }
     ]},
     { letter: 'R', examples: [
         { text: 'Rabbit', image: 'images/en/Rabbit.png' },
@@ -517,7 +517,7 @@
         { text: 'X-ray', image: 'images/en/X-ray.png' },
         { text: 'Xylophone', image: 'images/en/Xylophone.png' },
         { text: 'Box', image: 'images/en/box.png' },
-        { text: 'Xmas', image: 'images/en/Xmas.png' }
+        { text: 'Xmas', image: 'images/en/xmas.png' }
     ]},
     { letter: 'Y', examples: [
         { text: 'Yellow', image: 'images/en/Yellow.png' },
