--- a/kurdish.html
+++ b/kurdish.html
@@ -482,9 +482,9 @@
                          audio: 'audio/ku/rr.mp3',
                          examples: [
                             { text: 'تۆپ', image: 'images/ku/6.تۆپ.png', audio: 'audio/ku/marr.mp3' },
-                            { text: 'نۆک', image: 'images/ku/6.نۆک.png', audio: 'audio/ku/baroo.mp3' },
-                            { text: 'قۆخ', image: 'images/ku/6.قۆخ.png', audio: 'audio/ku/karoo.mp3' },
-                            { text: 'دۆ', image: 'images/ku/6.دۆ.png', audio: 'audio/ku/sharr.mp3' }
+                            { text: 'نۆک', image: 'images/ku/5.نۆک.png', audio: 'audio/ku/baroo.mp3' },
+                            { text: 'قۆخ', image: 'images/ku/5.مەڕ.png', audio: 'audio/ku/karoo.mp3' },
+                            { text: 'دۆ', image: 'images/ku/5.دۆ.png', audio: 'audio/ku/sharr.mp3' }
                         ],
                          lessonLink: '#' // placeholder link
                     },
@@ -531,18 +531,6 @@
                             { text: 'تیشک', image: 'images/ku/tishk.png', audio: 'audio/ku/tishk.mp3' },
                             { text: 'تاس', image: 'images/ku/tas.png', audio: 'audio/ku/tas.mp3' },
                             { text: 'توێژاڵ', image: 'images/ku/twezhal.png', audio: 'audio/ku/twezhal.mp3' }
-                        ],
-                         lessonLink: '#' // placeholder link
-                    },
-                    
-                    {
-                         letter: 'ی',
-                         audio: 'audio/ku/y.mp3',
-                         examples: [
-                            { text: 'کیسەڵ', image: 'images/ku/7.کیسەڵ.png', audio: 'audio/ku/yani.mp3' },
-                            { text: 'ماسی', image: 'images/ku/7.ماسی.png', audio: 'audio/ku/yari.mp3' },
-                            { text: 'مراوی', image: 'images/ku/7.مراوی.png', audio: 'audio/ku/yasamin.mp3' },
-                            { text: 'یاری', image: 'images/ku/7.یاری.png', audio: 'audio/ku/yak.mp3' }
                         ],
                          lessonLink: '#' // placeholder link
                     },
