--- a/kurdish.html
+++ b/kurdish.html
@@ -482,9 +482,9 @@
                          audio: 'audio/ku/rr.mp3',
                          examples: [
                             { text: 'تۆپ', image: 'images/ku/6.تۆپ.png', audio: 'audio/ku/marr.mp3' },
-                            { text: 'نۆک', image: 'images/ku/5.نۆک.png', audio: 'audio/ku/baroo.mp3' },
-                            { text: 'قۆخ', image: 'images/ku/5.مەڕ.png', audio: 'audio/ku/karoo.mp3' },
-                            { text: 'دۆ', image: 'images/ku/5.دۆ.png', audio: 'audio/ku/sharr.mp3' }
+                            { text: 'نۆک', image: 'images/ku/6.نۆک.png', audio: 'audio/ku/baroo.mp3' },
+                            { text: 'قۆخ', image: 'images/ku/6.قۆخ.png', audio: 'audio/ku/karoo.mp3' },
+                            { text: 'دۆ', image: 'images/ku/6.دۆ.png', audio: 'audio/ku/sharr.mp3' }
                         ],
                          lessonLink: '#' // placeholder link
                     },{
