--- a/index.html
+++ b/index.html
@@ -761,11 +761,54 @@
           transform: scale(0.95);
         }
 
+        /* --- Clouds Styles (Copied from the other code) --- */
+        .clouds {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            pointer-events: none;
+            z-index: -1; /* Place behind all other content */
+        }
+
+        .cloud {
+            position: absolute;
+            background: rgba(255, 255, 255, 0.8); /* Slightly transparent white */
+            border-radius: 100px;
+           
+            animation: float 15s infinite linear; /* Apply the floating animation */
+        }
+
+        /* Specific cloud sizes, positions, and animation durations */
+        .cloud:nth-child(1) { width: 100px; height: 40px; top: 10%; left: -100px; animation-duration: 20s; }
+        .cloud:nth-child(2) { width: 60px; height: 30px; top: 30%; left: -60px; animation-duration: 15s; }
+        .cloud:nth-child(3) { width: 80px; height: 35px; top: 50%; left: -80px; animation-duration: 18s; }
+        .cloud:nth-child(4) { width: 70px; height: 20px; top: 70%; left: -100px; animation-duration: 20s; }
+        .cloud:nth-child(5) { width: 40px; height: 25px; top: 65%; left: -60px; animation-duration: 15s; }
+        .cloud:nth-child(6) { width: 50px; height: 15px; top: 80%; left: -80px; animation-duration: 18s; }
+
+        /* Animation for floating clouds */
+        @keyframes float {
+            from { transform: translateX(-100px); } /* Start off-screen left */
+            to { transform: translateX(calc(100vw + 100px)); } /* Move across to off-screen right */
+        }
+
     </style>
     <!-- Alpine.js -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body dir="rtl">
+
+    <!-- Clouds Background (Copied from the other code) -->
+    <div class="clouds">
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+    </div>
 
     <!-- Download button and menu container -->
     <!-- @click.outside="open = false" ensures menu closes when clicking anywhere else -->
